--- a/NUMPY_NN.ipynb
+++ b/NUMPY_NN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NUMPY_NN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNAkVtIKnlG92SSiesVie27",
+      "authorship_tag": "ABX9TyPpaMMip5bVjNG93MDJRQI6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,42 +51,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WPWINOojsIKo"
+      },
+      "source": [
+        "# preparing non-linear dataset \n",
+        "x , y = make_moons(n_samples=10, shuffle=True, noise=0.15)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jG1LKNHpBuon",
-        "outputId": "faa5b93b-669b-4527-abf0-09604a97d5bd"
+        "outputId": "0323064e-cedb-4875-be08-c48f7aa39fa0"
       },
       "source": [
-        "# preparing non-linear dataset \n",
-        "x , y = make_moons(n_samples=10, shuffle=True, noise=0.15)\n",
         "\n",
+        "\n",
+        "def relu(x: np.array):\n",
+        "   return np.where(x > 0, x, 0)\n",
+        "\n",
+        "def retrieve(model):\n",
+        "  W1 = model[\"W1\"]\n",
+        "  b1 = model[\"b1\"]\n",
+        "  W2 = model[\"W2\"]\n",
+        "  b2 = model[\"b2\"]\n",
+        "\n",
+        "\n",
+        "  return W1, b1, W2, b2   \n",
         "n_samples = len(x)\n",
         "input_neurons = 2\n",
         "output_neurons = 2\n",
         "learning_rate = 0.001 \n",
         "Lambda = 0.01 \n",
         "\n",
-        "class NN():\n",
-        "  def __init__(self, input_neurons, output_neurons, lr):\n",
-        "    self.layer1 = np.random.rand(input_neurons, 3)\n",
-        "    self.layer2 = np.random.rand(3, output_neurons)\n",
+        "# model_dict = {\"W1\": W1, \"b1\": b1, \"W2\": W2, \"b2\": b2}\n",
+        "\n",
+        "def forward(x, model):\n",
+        "  W1, b1, W2, b2 = retrieve(model)\n",
         "  \n",
-        "  def relu(self, x: np.array):\n",
-        "   return np.where(x > 0, x, 0)\n",
+        "  out1 = x.dot(W1) + b1\n",
+        "  out1 = np.tanh(out1)\n",
+        "  out2 = out1.dot(W2) + b2\n",
+        "  out2 = np.tanh(out2)\n",
+        "  \n",
+        "  result = np.exp(out2)\n",
+        "  softmax = result / np.sum(result, axis = 1, keepdims=true)\n",
         "\n",
-        "  def sigmoid(self, x: np.array):\n",
-        "    return 1 / 1 - np.exp(-x)\n",
+        "  return softmax \n",
         "\n",
-        "  def Forward(self, x):\n",
-        "    out = np.dot(x, self.layer1)\n",
-        "    out = self.sigmoid(out)\n",
-        "    out = np.dot(out, self.layer2)\n",
-        "    return out \n",
+        "def loss(y_pred, y, model):\n",
+        "  W1, b1, W2, b2 = retrieve(model)\n",
+        "  confidence_array = np.zeros(y.shape[0])\n",
+        "  for i, correct_index in enumerate(y):\n",
+        "    confidence_array[i] = y_pred[i][correct_index]\n",
         "\n",
+        "  log_loss = np.sum(-np.log(confidence_array))\n",
+        "  reg_loss = (Lambda/2) * (np.sum(np.square(W1)) +np.sum(np.square(W1)))\n",
+        "  loss = log_loss + reg_loss \n",
+        "  return float(loss / y.shape[0])\n",
         "\n",
-        "n = NN(input_neurons=input_neurons, output_neurons=output_neurons, lr = learning_rate)\n",
-        "print(n.Forward(x))\n"
+        "def predict(x):\n",
+        "  W1, b1, W2, b2 = retrieve(model)\n",
+        "  \n",
+        "  out1 = x.dot(W1) + b1\n",
+        "  out1 = np.tanh(out1)\n",
+        "  out2 = out1.dot(W2) + b2\n",
+        "  out2 = np.tanh(out2)\n",
+        "  \n",
+        "  result = np.exp(out2)\n",
+        "  softmax = result / np.sum(result, axis = 1, keepdims=true)\n",
+        "\n",
+        "  return np.argmax(softmax, axis=1, keepdims=True) \n",
+        "\n",
+        "loss(np.random.rand(10,2), y, \"\")\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -94,16 +138,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.21744223  0.71489291]\n",
-            " [-0.17128952 -0.12714078]\n",
-            " [ 0.38705416  0.97407079]\n",
-            " [ 0.29268398  0.74783864]\n",
-            " [-0.10793901 -0.19546025]\n",
-            " [ 0.1699798   0.3950837 ]\n",
-            " [ 0.18884588  0.63820079]\n",
-            " [-0.12500223 -0.66345952]\n",
-            " [ 0.05603884 -0.00981666]\n",
-            " [ 0.27109403  0.65822018]]\n"
+            "[[0.         0.30022201 0.30022201 0.89708159]\n",
+            " [1.         0.06639183 0.65486901 0.06639183]\n",
+            " [1.         0.0124803  0.29919487 0.0124803 ]\n",
+            " [1.         0.87514844 0.99037261 0.87514844]\n",
+            " [0.         0.76391226 0.76391226 0.77004334]\n",
+            " [0.         0.31157161 0.31157161 0.22457438]\n",
+            " [0.         0.13574403 0.13574403 0.89831795]\n",
+            " [1.         0.03719339 0.46200736 0.03719339]\n",
+            " [1.         0.79685796 0.92232355 0.79685796]\n",
+            " [0.         0.29149643 0.29149643 0.07366317]]\n"
           ]
         }
       ]
@@ -112,28 +156,27 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 304
         },
-        "id": "Lpb5vOE-L-4N",
-        "outputId": "b1ee4a65-f824-4427-fd62-6d1165c23ad9"
+        "id": "Q96_Z9c1ys8Y",
+        "outputId": "2c3ad1a4-9be5-4a37-bba7-cbceedd32d22"
       },
       "source": [
-        "v = np.array([[1,1,1], \n",
-        "              [1,1,1]])\n",
-        "\n",
-        "m = np.array([[1,2,3], \n",
-        "              [1,2,3], \n",
-        "              [1,2,3]])\n",
-        "print(np.dot(v,m))"
+        "ˇ"
       ],
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[3 6 9]\n",
-            " [3 6 9]]\n"
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-34-5cd8773181d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mln\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    213\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0;32m--> 215\u001b[0;31m                                      \"{!r}\".format(__name__, attr))\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'ln'"
           ]
         }
       ]
@@ -141,11 +184,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R0RzRKt5N8sv"
+        "id": "cEz3aXmvys0-"
       },
       "source": [
-        " def relu(x: np.array):\n",
-        "   return np.where(x > 0, x, 0)\n"
+        ""
       ],
       "execution_count": null,
       "outputs": []
