--- a/Sentiment_Analysis_Model.ipynb
+++ b/Sentiment_Analysis_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Sentiment Analysis Model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMa9zh91kqO2bqyzh671Sye",
+      "authorship_tag": "ABX9TyNlO7QLP23+dMugU0bJ8whl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DKxm39eiA6Uj",
-        "outputId": "cfc7af37-ca47-4638-a6cb-fc3c45ba3d91"
+        "outputId": "eac55423-ebff-4a43-e2cf-f05c64def75b"
       },
       "source": [
         "import numpy as np\n",
@@ -49,9 +49,11 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import MinMaxScaler, Normalizer, OneHotEncoder, LabelEncoder \n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import accuracy_score\n",
+        "import keras \n",
+        "from keras.layers.core import Dense"
       ],
-      "execution_count": 76,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +84,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -110,7 +112,7 @@
         "  global ps \n",
         "  return ps.stem(word)\n"
       ],
-      "execution_count": 51,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -121,7 +123,7 @@
       "source": [
         "EnglishStopwords = GetStopwords()"
       ],
-      "execution_count": 52,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -137,11 +139,11 @@
         "  sentence, emotion = datapoint\n",
         "  sentence = replace_not_alphabetical_chars(sentence)\n",
         "  sentence = SplitSentence(sentence)\n",
-        "  sentence = [GetStem(word) for word in sentence if word not in set(EnglishStopwords)]\n",
+        "  # sentence = [GetStem(word) for word in sentence if word not in set(EnglishStopwords)]\n",
         "  sentence = \" \".join(sentence)\n",
         "  sentences.append(sentence)\n"
       ],
-      "execution_count": 59,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -154,70 +156,32 @@
         "CV = CountVectorizer(max_features=1500)\n",
         "x = CV.fit_transform(sentences).toarray()"
       ],
-      "execution_count": 74,
+      "execution_count": 107,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-fahfbF1S6lA",
-        "outputId": "2ca754f9-9775-4c06-9d46-133fb33990e9"
+        "id": "-fahfbF1S6lA"
       },
       "source": [
-        "y[: 10]"
+        "y = data[ : , [-1]]"
       ],
-      "execution_count": 80,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([['sadness'],\n",
-              "       ['sadness'],\n",
-              "       ['sadness'],\n",
-              "       ['joy'],\n",
-              "       ['sadness'],\n",
-              "       ['fear'],\n",
-              "       ['anger'],\n",
-              "       ['joy'],\n",
-              "       ['joy'],\n",
-              "       ['anger']], dtype='<U296')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 80
-        }
-      ]
+      "execution_count": 108,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "s2h2IzUsSGVG",
-        "outputId": "f9e8a350-5c64-4cc8-d602-5b1569deddf5"
+        "id": "s2h2IzUsSGVG"
       },
       "source": [
         "# Encoding Y (getting classes)\n",
-        "encoder = LabelEncoder()\n",
-        "labels = encoder.fit_transform(y.flatten())\n",
-        "classes = encoder.classes_"
+        "encoder = OneHotEncoder()\n",
+        "y = encoder.fit_transform(y).toarray()"
       ],
-      "execution_count": 79,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[4 4 4 ... 2 2 1]\n",
-            "['anger' 'fear' 'joy' 'love' 'sadness' 'surprise']\n"
-          ]
-        }
-      ]
+      "execution_count": 109,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -225,10 +189,146 @@
         "id": "YAxxszVWSDmi"
       },
       "source": [
-        ""
+        "model = tf.keras.models.Sequential()\n",
+        "model.add(Dense(units = 2000, activation=\"relu\"))\n",
+        "model.add(Dense(units = 6, activation=\"sigmoid\"))\n",
+        "model.compile(optimizer = 'adam', loss = 'categorical_crossentropy', metrics = ['accuracy'])"
       ],
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Em-NOmI_stdc",
+        "outputId": "66bcdacd-c4bb-4af9-cef8-efefa5efe16c"
+      },
+      "source": [
+        "print(x.shape)\n",
+        "print(y.shape)"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2000, 1500)\n",
+            "(2000, 6)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GCanLPwwtC_9",
+        "outputId": "a9dca370-a317-49fc-e3fd-df67b6e2ee3e"
+      },
+      "source": [
+        "model.fit(x,y, epochs=10, batch_size=64)"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "32/32 [==============================] - 2s 36ms/step - loss: 1.5352 - accuracy: 0.4235\n",
+            "Epoch 2/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.9115 - accuracy: 0.7525\n",
+            "Epoch 3/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.4095 - accuracy: 0.9320\n",
+            "Epoch 4/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.1576 - accuracy: 0.9845\n",
+            "Epoch 5/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.0733 - accuracy: 0.9940\n",
+            "Epoch 6/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.0418 - accuracy: 0.9970\n",
+            "Epoch 7/10\n",
+            "32/32 [==============================] - 1s 35ms/step - loss: 0.0271 - accuracy: 1.0000\n",
+            "Epoch 8/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.0191 - accuracy: 0.9995\n",
+            "Epoch 9/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.0144 - accuracy: 1.0000\n",
+            "Epoch 10/10\n",
+            "32/32 [==============================] - 1s 34ms/step - loss: 0.0112 - accuracy: 1.0000\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fd7d0663910>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Npx45tJv_f9",
+        "outputId": "fe312acd-9310-4307-9e02-efce4e82603b"
+      },
+      "source": [
+        "classes"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['anger', 'fear', 'joy', 'love', 'sadness', 'surprise'],\n",
+              "      dtype='<U296')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C-0sCGDjuWqr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0945ac01-0fc7-488a-b996-36a9acc7f804"
+      },
+      "source": [
+        "UserInput = input(\"> \")\n",
+        "string = [UserInput]\n",
+        "string = CV.transform(string).toarray()\n",
+        "pred = model.predict(np.array([string]))\n",
+        "index = np.argmax(pred)\n",
+        "print(classes[index])"
+      ],
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "> I didn't know that this was going to be the best game of 2020!\n",
+            "anger\n"
+          ]
+        }
+      ]
     }
   ]
 }
